--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,6 +3,7 @@ pull_request_rules:
     # https://doc.mergify.io/examples.html#require-all-requested-reviews-to-be-approved 
     conditions:
       - "#approved-reviews-by>=3"
+      - "#changes-requested-reviews-by=0"
       - base=master
       - label=approval + 2
     actions:
