--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,3 +10,31 @@ pull_request_rules:
       merge:
         method: merge
       delete_head_branch: {}
+
+  - name: Add Label needs author response
+    conditions:
+      - "#approved-reviews-by>=1"
+    actions:
+      label:
+        add: ["needs author response", "needs review"]
+
+  - name: Remove Label needs author response
+    conditions:
+      - "#approved-reviews-by=0"
+    actions:
+      label:
+        remove: ["needs author response"]
+
+  - name: Add Label approval + 1
+    conditions:
+      - "#approved-reviews-by=1"
+    actions:
+      label:
+        add: ["approval + 1"]
+
+  - name: Add Label approval + 2
+    conditions:
+      - "#approved-reviews-by=2"
+    actions:
+      label:
+        add: ["approval + 2"]
