--- a/.mergify.yml
+++ b/.mergify.yml
@@ -7,6 +7,8 @@ pull_request_rules:
       - base=master
       - label=approval + 2
     actions:
+      label:
+        add: ["needs review"]
       merge:
         method: merge
       delete_head_branch: {}
@@ -16,7 +18,7 @@ pull_request_rules:
       - "#changes-requested-reviews-by>=1"
     actions:
       label:
-        add: ["needs author response", "needs review"]
+        add: ["needs author response"]
 
   - name: Remove Label needs author response
     conditions:
@@ -24,6 +26,7 @@ pull_request_rules:
     actions:
       label:
         remove: ["needs author response"]
+        add: ["needs review"]
 
   - name: Add Label approval + 1
     conditions:
