📝 Merge시 branch 지우는 로직 추가

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -9,6 +9,7 @@ pull_request_rules:
     actions:
       merge:
         method: merge
+      delete_head_branch: {}
 
   - name: Add Label needs author response
     conditions:
